Set profile photo to 97x97 dimensions

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -56,6 +56,9 @@ header {
         display: block;
         margin: 0 auto 24px;
         border-radius: 100px;
+        width: 97px;
+        height: 97px;
+        object-fit: cover;
     }
 }
 
